--- a/dairy.html
+++ b/dairy.html
@@ -22,11 +22,11 @@
 </div>
 <div class="main">
   <ul>
-    <li style="color:blue"><h2>我的github第一天</h2></li>
+    <li style="color:blue"><h2>结对编程感受</h2></li>
     <li style="color:#fff;font-size:18px; list-style-type:none;">
-      <p>&nbsp;&nbsp;&nbsp;&nbsp;今天费了半天功夫才弄好了github主页，虽然中途遇到了很多波折，但还是很开心最后成功了。</p>
-      <p>&nbsp;&nbsp;&nbsp;&nbsp;我就随便吐个槽吧。弄sourcetree的时候是最让人蛋疼的，文档里根本没说还要弄ssh密钥，结果我花了好久的时间搞懂了为什么提交不上去最新的版本。另外自己的设计能力也是很捉急，所以现在这个主页也只是1.000版本，之后我还会进行优化。毕竟现在的版本看上去挺简约的。话说简约也是一种美嘛！</p>
-      <p>&nbsp;&nbsp;&nbsp;&nbsp;对于javascript我抱有很大的期待，因为我知道这是一个非常强大的语言，之前还用javascript代码抢过激活码等等……希望小学期能有个愉快的经历吧！</p>
+      <p>&nbsp;&nbsp;&nbsp;&nbsp;这次的结对编程作业做了两天，感觉收获很大</p>
+      <p>&nbsp;&nbsp;&nbsp;&nbsp;以前都是自己编程，我写代码的毛病就是慢，比较拖，经常心不在焉。现在两个人的编程让我集中了注意力，效率成倍的上升，而且还可以时不时的互相探讨，让思路保持清晰</p>
+      <p>&nbsp;&nbsp;&nbsp;&nbsp;另一方面，我觉得结对编程对于调bug也是很有帮助，很多bug自己是不会发现的，而且结对编程让很多bug直接被扼杀在了摇篮里，这一点我们深有体会。</p>
     </li>
   </ul>
 </div>
